// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SidebarMenu renders 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <ul
      class="MuiList-root PicassoMenu-root PicassoSidebarMenu-root PicassoMenu-noPadding"
      role="menu"
      tabindex="-1"
    />
  </div>
</div>
`;

exports[`SidebarMenu with bottom 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <ul
      class="MuiList-root PicassoMenu-root PicassoSidebarMenu-root PicassoSidebarMenu-bottom PicassoMenu-noPadding"
      role="menu"
      tabindex="-1"
    />
  </div>
</div>
`;
